crates/xlate/tests/snapshots/golden_matrix__images__chat_to_responses__gpt4o.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-4o",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Compare these two images."
        },
        {
          "type": "input_image",
          "image_url": "data:image/jpeg;base64,/9j/4AAQSkZJRg=="
        },
        {
          "type": "input_image",
          "image_url": "https://example.com/cat.png"
        }
      ]
    }
  ]
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
ext.chat.image_detail=dropped
